feat: parallel routes article added to next.js course

--- a/src/app/(courses)/nextjs-15/(017)/dynamic-routes/page.mdx
+++ b/src/app/(courses)/nextjs-15/(017)/dynamic-routes/page.mdx
@@ -100,4 +100,4 @@ By using `generateStaticParams`, Next.js will pre-render these specific product 
 Dynamic routes in Next.js provide a flexible way to handle variable URL segments. Use `[param]` for single dynamic segments, `[...param]` for capturing multiple segments, and `[[param]]` for optional segments. For optimal performance, leverage `generateStaticParams` to pre-render paths with known parameters.
 
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/project-organization'} prevText={'Mastering Next.js Folder Structure: Best Practices for Organizing Your Project'}/>
+<LessonNavigation nextUrl={'/nextjs-15/parallel-routes'} nextText={'Parallel routes in Next.js'} prevUrl={'/nextjs-15/project-organization'} prevText={'Mastering Next.js Folder Structure: Best Practices for Organizing Your Project'}/>
