feat: parallel route article meta description added

--- a/src/app/(courses)/nextjs-15/(018)/parallel-routes/page.mdx
+++ b/src/app/(courses)/nextjs-15/(018)/parallel-routes/page.mdx
@@ -2,7 +2,7 @@ import { LessonNavigation } from "@/components/lesson-navigation";
 
 export const metadata={
   title : "Parallel Routes in Next.js",
-  description: ""
+  description: "how to use Parallel Routes in Next.js for dynamic layouts, state persistence, and optimized navigation with practical examples and best practices"
 }
 
 # Understanding Parallel Routes in Next.js
