feat: intercepting routes article on next.js course added

--- a/src/app/(courses)/nextjs-15/(018)/parallel-routes/page.mdx
+++ b/src/app/(courses)/nextjs-15/(018)/parallel-routes/page.mdx
@@ -130,4 +130,4 @@ When navigating to the `Shop` route, the `loading.js` component renders while th
 Parallel routes in Next.js streamline the development of complex layouts with persistent slots, optimized rendering, and built-in error/loading handling. Use them to create cohesive and dynamic user experiences while leveraging Next.js's powerful features.
 
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/dynamic-routes'} prevText={'Dynamic Routes in Next.js'}/>
+<LessonNavigation nextUrl={'/nextjs-15/intercepting-routes'} nextText={'Intercepting Routes in Next.js 15'} prevUrl={'/nextjs-15/dynamic-routes'} prevText={'Dynamic Routes in Next.js'}/>
