feat: intercepting routes article desc updated

--- a/src/app/(courses)/nextjs-15/(019)/intercepting-routes/page.mdx
+++ b/src/app/(courses)/nextjs-15/(019)/intercepting-routes/page.mdx
@@ -2,7 +2,7 @@ import { LessonNavigation } from "@/components/lesson-navigation";
 
 export const metadata={
   title : "Intercepting Routes in Next.js",
-  description: ""
+  description: "Route interception in Next.js is a powerful technique that allows you to modify the default behavior of routing"
 }
 
 
@@ -91,4 +91,4 @@ This approach isn't limited to modals. Other potential use cases include:
 
 Route interception in Next.js offers developers flexibility to build highly interactive applications. By leveraging parallel routes and dynamic URL handling, you can enhance the user experience while maintaining consistent navigation and refresh behavior. Try it out in your projects for features like modals, sidebars, or nested content displays.
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/parallel-routes'} prevText={'Parallel Routes in Next.js'}/>
+<LessonNavigation nextUrl={'/nextjs-15/route-handlers'} nextText={'Route Handlers in Next.js'} prevUrl={'/nextjs-15/parallel-routes'} prevText={'Parallel Routes in Next.js'}/>
