feat: internationalization article added

--- a/src/app/(courses)/nextjs-15/(021)/middleware/page.mdx
+++ b/src/app/(courses)/nextjs-15/(021)/middleware/page.mdx
@@ -137,5 +137,4 @@ export function middleware(request) {
 }
 ```
 
-
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/route-handlers'} prevText={'Route Handlers in Next.js'}/>
+<LessonNavigation nextUrl={'/nextjs-15/internationalization'} nextText={'Internationalizing Your Next.js Application'} prevUrl={'/nextjs-15/route-handlers'} prevText={'Route Handlers in Next.js'}/>
