feat: rendering article added

--- a/src/app/(courses)/nextjs-15/(022)/internationalization/page.mdx
+++ b/src/app/(courses)/nextjs-15/(022)/internationalization/page.mdx
@@ -159,4 +159,4 @@ export default function Layout({ children, params }: { children: React.ReactNode
 
 By following these steps, you can implement efficient and scalable i18n in your Next.js application, delivering a seamless experience to users worldwide.
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/middleware'} prevText={'Middleware in Next.js'}/>
+<LessonNavigation nextUrl={'/nextjs-15/rendering'} nextText={'A Deep Dive into Server and Client Components Rendering'} prevUrl={'/nextjs-15/middleware'} prevText={'Middleware in Next.js'}/>
