feat: partial prerendering link added

--- a/src/app/(courses)/nextjs-15/(023)/rendering/page.mdx
+++ b/src/app/(courses)/nextjs-15/(023)/rendering/page.mdx
@@ -98,4 +98,4 @@ Next.js provides robust mechanisms for data sharing and caching:
 
 Next.js rendering represents a significant evolution in web development, offering developers unprecedented control and performance optimization. By understanding server and client components, you can build faster, more efficient web applications.
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/internationalization'} prevText={'Internationalizing Your Next.js Application'}/>
+<LessonNavigation nextUrl={'/nextjs-15/partial-prerendering'} nextText={'What is Partial Prerendering'} prevUrl={'/nextjs-15/internationalization'} prevText={'Internationalizing Your Next.js Application'}/>
