feat: data fetching article added

--- a/src/app/(courses)/nextjs-15/(024)/partial-prerendering/page.mdx
+++ b/src/app/(courses)/nextjs-15/(024)/partial-prerendering/page.mdx
@@ -88,4 +88,4 @@ When you build your project (`npm run build`), Next.js generates static assets a
 
 Partial prerendering bridges the gap between static and dynamic content delivery. By leveraging this technique, you can ensure your application benefits from both the speed of static files and the flexibility of server-side rendering. As this feature evolves, it promises to make Next.js an even more powerful tool for building modern web applications.
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/rendering'} prevText={'A Deep Dive into Server and Client Components Rendering'}/>
+<LessonNavigation nextUrl={'/nextjs-15/data-fetching'} nextText={'Data Fetching and Caching'} prevUrl={'/nextjs-15/rendering'} prevText={'A Deep Dive into Server and Client Components Rendering'}/>
