feat: server action article added in next.js course

--- a/src/app/(courses)/nextjs-15/(025)/data-fetching/page.mdx
+++ b/src/app/(courses)/nextjs-15/(025)/data-fetching/page.mdx
@@ -267,4 +267,4 @@ To further optimize data fetching, you can:
 ## Conclusion
 Leveraging these techniques ensures a robust and efficient data fetching strategy in your Next.js applications. Whether working with APIs or databases, proper use of caching and validation can significantly improve your app's performance and maintainability.
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/partial-prerendering'} prevText={'What is Partial Prerendering'}/>
+<LessonNavigation nextUrl={'/nextjs-15/server-actions'} nextText={'Server Actions and Mutations'} prevUrl={'/nextjs-15/partial-prerendering'} prevText={'What is Partial Prerendering'}/>
