caching article added

--- a/src/app/(courses)/nextjs-15/(026)/server-actions/page.mdx
+++ b/src/app/(courses)/nextjs-15/(026)/server-actions/page.mdx
@@ -161,4 +161,4 @@ export default function CommentForm() {
 
 Server Actions streamline server-side operations in Next.js, enabling you to handle data efficiently and integrate seamlessly with forms and client components. By reducing the complexity of API management, they make developing modern web applications simpler and more maintainable.
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/data-fetching'} prevText={'Data Fetching and Caching'}/>
+<LessonNavigation nextUrl={'/nextjs-15/caching'} nextText={"Understanding Caching in Next.js"} prevUrl={'/nextjs-15/data-fetching'} prevText={'Data Fetching and Caching'}/>
