feat: styling and database articles added to nextjs course

--- a/src/app/(courses)/nextjs-15/(027)/caching/page.mdx
+++ b/src/app/(courses)/nextjs-15/(027)/caching/page.mdx
@@ -2,7 +2,7 @@ import { LessonNavigation } from "@/components/lesson-navigation";
 
 export const metadata={
   title : "Understanding Caching in Next.js",
-  description: ""
+  description: "Caching plays a pivotal role in optimizing data fetching and rendering processes"
 }
 
 # Understanding Caching in Next.js: A Comprehensive Guide
@@ -222,4 +222,4 @@ Understanding and leveraging the different caching mechanisms in Next.js can sig
 
 By thoughtfully implementing these caching strategies, you can create fast, efficient, and scalable web applications that provide an excellent user experience.
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/server-actions'} prevText={'Server Actions and Mutations in Next.js'}/>
+<LessonNavigation nextUrl={'/nextjs-15/styling'} nextText={'Styling Next.js Apps: CSS, Sass & Tailwind Techniques Explained'} prevUrl={'/nextjs-15/server-actions'} prevText={'Server Actions and Mutations in Next.js'}/>
