feat: authentication and authorization articles added to next.js course

--- a/src/app/(courses)/nextjs-15/(029)/working-with-mongodb/page.mdx
+++ b/src/app/(courses)/nextjs-15/(029)/working-with-mongodb/page.mdx
@@ -116,4 +116,4 @@ export default async function HomePage() {
 This setup ensures a scalable and maintainable approach to handling databases in Next.js.
 
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/styling'} prevText={'Styling Next.js Apps: CSS, Sass & Tailwind Techniques Explained'}/>
+<LessonNavigation nextUrl={'/nextjs-15/authentication'} nextText={'Implementing Authentication in Next.js using Firebase and Google Sign-In'} prevUrl={'/nextjs-15/styling'} prevText={'Styling Next.js Apps: CSS, Sass & Tailwind Techniques Explained'}/>
